fixed button on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,10 @@ main h1 {
 }
 
 
-.button-container h2 {
+.button-container button {
+  padding: 0;
+  border: none;
+  background: none;
   cursor: pointer;
   font-family: "Gloria Hallelujah", cursive;
   color: #FCF361;
